fix(input): date type in ion-input now aligns correctly on iOS 15

--- a/core/src/css/core.scss
+++ b/core/src/css/core.scss
@@ -310,3 +310,10 @@ ion-accordion-group.accordion-group-expand-inset.md ion-accordion.accordion-expa
 ion-accordion-group.accordion-group-expand-inset.md ion-accordion.accordion-expanded:first-of-type {
   margin-top: 0;
 }
+
+// Safari/iOS 15 changes the appearance of input[type="date"].
+// For backwards compatibility from Ionic 5/Safari 14 designs,
+// we override the appearance only when using within an ion-input.
+ion-input input::-webkit-date-and-time-value {
+  text-align: start;
+}
